k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-microservice
  labels:
    name: my-microservice
    environment: production
