k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-microservice-service
  namespace: my-microservice
  labels:
    app: my-microservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: my-microservice
